alap-2 (add important to css)

--- a/src/index.css
+++ b/src/index.css
@@ -40,9 +40,9 @@
 }
 
 .css-1fuz9qr-MuiPaper-root-MuiAlert-root {
-    width: 70%;
+    width: 70% !important;
 }
 
 .css-1hdyuqk-MuiPaper-root-MuiAlert-root {
-    width: 70%;
+    width: 70% !important;
 }
