alap-2 (css another way)

--- a/src/index.css
+++ b/src/index.css
@@ -39,10 +39,6 @@
     cursor: pointer;
 }
 
-.css-1fuz9qr-MuiPaper-root-MuiAlert-root {
-    width: 70% !important;
-}
-
-.css-1hdyuqk-MuiPaper-root-MuiAlert-root {
+.warning-w {
     width: 70% !important;
 }
