--- a/src/index.css
+++ b/src/index.css
@@ -42,3 +42,22 @@
 .warning-w {
     width: 70% !important;
 }
+
+.forgotPassword{
+    background: #ABD8F6;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.forgotPassword .box{
+    padding: 20px;
+    background: #f5f5f5;
+    border: 1px solid #f5f5f5;
+    border-radius: 10px;
+}
+
+.forgotPassword .box .MuiFormControl-root{
+    width: 100%;
+    margin: 10px 0;
+}
