--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,10 @@
     padding: 0;
 }
 
+ul,ol{
+    list-style: none;
+}
+
 .regimg {
     width: 100%;
     height: 100vh;
@@ -43,21 +47,53 @@
     width: 70% !important;
 }
 
-.forgotPassword{
+.forgotPassword {
     background: #ABD8F6;
     height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.forgotPassword .box{
+
+.forgotPassword .box {
     padding: 20px;
     background: #f5f5f5;
     border: 1px solid #f5f5f5;
     border-radius: 10px;
 }
 
-.forgotPassword .box .MuiFormControl-root{
+.forgotPassword .box .MuiFormControl-root {
     width: 100%;
     margin: 10px 0;
+}
+
+
+/* NAV CSS */
+
+.navbar {
+    width: 100%;
+    height: 100vh;
+}
+
+.navcontainer {
+    width: 100px;
+    height: 90vh;
+    background: #5F35F5;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.navcontainer img {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+}
+
+.icon {
+    color: #FFFFFFB2;
+    font-size: 25px;
+    margin: 30px 0;
 }
