--- a/src/index.css
+++ b/src/index.css
@@ -130,7 +130,81 @@ ol {
     height: 120%;
     background: #5F35F5;
     content: "";
-
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
+}
+
+.box {
+    margin-top: 10px;
+    margin-bottom: 20px;
+    padding: 10px;
+    width: 100%;
+    height: 300px;
+    background: white;
+    border-radius: 10px;
+    box-sizing: border-box;
+    -webkit-box-shadow: 2px 2px 24px 0px rgba(0, 0, 0, 0.44);
+    -moz-box-shadow: 2px 2px 24px 0px rgba(0, 0, 0, 0.44);
+    box-shadow: 2px 2px 24px 0px rgba(0, 0, 0, 0.44);
+}
+
+.list {
+    display: flex;
+    column-gap: 50px;
+    margin: 15px 15px;
+    padding-bottom: 10px;
+    border-bottom: 1px solid black;
+}
+
+.list:first-child {
+    margin-top: 5px;
+}
+
+.list:last-child {
+    border-bottom: 0;
+    padding-bottom: 0;
+}
+
+.titlebox {
+    display: flex;
+    justify-content: space-between;
+    height: 12%;
+    padding-left: 15px;
+    margin-top: 10px;
+}
+
+.listbox {
+    height: 85%;
+    overflow-y: scroll;
+}
+
+.list img {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+}
+
+.box h3 {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 600;
+    font-size: 20px;
+}
+
+.box .button {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 600;
+    font-size: 20px;
+}
+
+.box h4 {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 600;
+    font-size: 18px;
+}
+
+.box p {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 500;
+    font-size: 14px;
+    color: rgba(77, 77, 77, 0.75);
 }
