--- a/src/index.css
+++ b/src/index.css
@@ -244,7 +244,7 @@ ol {
     padding: 25px;
     box-sizing: border-box;
     margin: auto;
-    height: 90vh;
+    height: 100vh;
 }
 
 
@@ -293,6 +293,32 @@ ol {
     align-self: flex-start;
 }
 
+
+.getimg {
+    width: 250px;
+    height: 250px;
+    background: #f1f1f1;
+    display: inline-block;
+    padding: 7px;
+    border-radius: 10px;
+    font-weight: bold;
+    margin: 10px 0;
+    align-self: flex-start;
+}
+
+.getimg>div>img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 10px;
+}
+
+.getimg>div {
+    width: 100%;
+    height: 100%;
+}
+
+
 .sendmsg {
     background: #5F35F5;
     display: inline-block;
@@ -304,11 +330,81 @@ ol {
     align-self: flex-end;
 }
 
-.time {
-    color: rgba(0, 0, 0, 0.65);
-}
 
 .sendmsg+.time {
     color: rgba(0, 0, 0, 0.65);
     align-self: flex-end;
+}
+
+
+
+.sendimg {
+    width: 250px;
+    height: 250px;
+    background: #5F35F5;
+    display: inline-block;
+    padding: 7px;
+    border-radius: 10px;
+    font-weight: bold;
+    margin: 10px 0;
+    align-self: flex-end;
+}
+
+.sendimg>div>img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 10px;
+}
+
+.sendimg>div {
+    width: 100%;
+    height: 100%;
+}
+
+.sendimg+.time {
+    color: rgba(0, 0, 0, 0.65);
+    align-self: flex-end;
+}
+
+
+.getaudio {
+    display: inline-block;
+    margin: 10px 0;
+    color: white;
+    align-self: flex-start;
+}
+
+.sendaudio {
+    display: inline-block;
+    margin: 10px 0;
+    color: white;
+    align-self: flex-end;
+}
+
+.sendaudio+.time {
+    color: rgba(0, 0, 0, 0.65);
+    align-self: flex-end;
+}
+
+.msgwrite {
+    width: 100%;
+    background: #f1f1f1;
+    border: 0;
+    padding: 15px;
+    border-radius: 10px;
+}
+
+
+.msgwritecon {
+    width: 85%;
+    border-radius: 10px;
+}
+
+
+.msgcopntainer {
+    display: flex;
+    justify-content: space-between;
+    padding: 25px 0;
+    border-top: 2px solid rgba(0, 0, 0, 0.75);
 }
