--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,14 @@ ol {
     list-style: none;
 }
 
+.dark {
+    background: #000;
+}
+
+.darktext{
+    color: white;
+}
+
 .regimg {
     width: 100%;
     height: 100vh;
@@ -148,12 +156,24 @@ ol {
     box-shadow: 2px 2px 24px 0px rgba(0, 0, 0, 0.44);
 }
 
+.dark .box {
+    background: rgb(0, 0, 0);
+    -webkit-box-shadow: 2px 2px 24px 0px rgba(255, 255, 255, 0.9);
+    -moz-box-shadow: 2px 2px 24px 0px rgba(255, 255, 255, 0.9);
+    box-shadow: 2px 2px 24px 0px rgba(255, 255, 255, 0.9);
+    color: #f1f1f1;
+}
+
 .list {
     display: flex;
     column-gap: 50px;
     margin: 15px 15px;
     padding-bottom: 10px;
     border-bottom: 1px solid black;
+}
+
+.dark .list{
+    border-bottom: 1px solid rgb(255, 255, 255);
 }
 
 .list:first-child {
@@ -202,6 +222,9 @@ ol {
     font-size: 18px;
 }
 
+.dark .box p{
+    color: #f1f1f1;
+}
 .box p {
     font-family: 'Poppins', sans-serif;
     font-weight: 500;
@@ -247,6 +270,12 @@ ol {
     height: 100vh;
 }
 
+.dark .chatbox {
+    -webkit-box-shadow: 0px 0px 34px 7px rgba(255, 255, 255, 0.9);
+    -moz-box-shadow: 0px 0px 34px 7px rgba(255, 255, 255, 0.9);
+    box-shadow: 0px 0px 34px 7px rgba(255, 255, 255, 0.9);
+}
+
 
 .msgprofile {
     display: flex;
@@ -255,6 +284,17 @@ ol {
     border-bottom: 2px solid rgba(0, 0, 0, 0.25);
 }
 
+.dark .msgprofile{
+    border-bottom: 2px solid rgba(255, 255, 255, 0.7);
+}
+
+.dark .msgprofile h3{
+    color: #f1f1f1;
+}
+
+.dark .msgprofile p{
+    color: #f1f1f1;
+}
 .signal {
     position: relative;
 }
